# SousDev

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml
.agents/context/: gotchas.md  improvements.md  project.md  prompts.md
.agents/skills/add-gh-command/: SKILL.md
.agents/skills/add-pipeline-stage/: SKILL.md
.agents/skills/cargo-fix-cycle/: SKILL.md
.claude/skills/add-gh-command/: SKILL.md
.claude/skills/add-pipeline-stage/: SKILL.md
.claude/skills/add-technique/: SKILL.md
prompts/: bug-fix-context.md  bug-fix.md  code-review.md  plan-execution.md  plan-generation.md  plan-pr-body.md  pr-comment-response.md  pr-description.md  pr-review.md  react-system.md  reflect.md  reflexion-reflect.md  reflexion-system.md  review-consolidation.md  review-feedback.md  system.md
src/: lib.rs  main.rs
src/pipelines/: cron_runner.rs  executor.rs  mod.rs  pipeline.rs  stage.rs  stores.rs  workflow_log.rs  workspace.rs
src/pipelines/stages/: agent_loop.rs  external_agent_loop.rs  parse.rs  pr_checkout.rs  pr_comment_responder.rs  (+6 more)
src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src/techniques/: mod.rs
src/tools/: built_ins.rs  mod.rs  registry.rs
src/tui/: app.rs  events.rs  mod.rs  session.rs  ui.rs
src/types/: config.rs  mod.rs  technique.rs
src/utils/: config_loader.rs  logger.rs  mod.rs  prompt_loader.rs  truncate.rs
src/workflows/: cron_runner.rs  executor.rs  github_issues.rs  github_prs.rs  linear_issues.rs  mod.rs  multi_review.rs  stage.rs  stores.rs  workflow.rs  workflow_log.rs  workspace.rs
(+29 files in other folders)
